Fix flake8 and tox
