# server/openapi_server/openapi/openapi.yaml
@@ -3,54 +3,57 @@ info:
   contact:
     email: thomas.schaffter@sagebionetworks.org
     name: The NLP Sandbox Team
-    url: https://Sage-Bionetworks.github.io/nlp-sandbox-schemas
+    url: https://nlpsandbox.github.io/nlpsandbox-schemas
   description: |
     The OpenAPI specification implemented by NLP Sandbox Person Name Annotators.
     # Overview
     This NLP tool detects references of person names in the clinical notes given as input and returns a list of person name annotations.
   license:
     name: Apache 2.0
-    url: https://github.com/Sage-Bionetworks/nlp-sandbox/blob/main/LICENSE
+    url: https://nlpsandbox.github.io/nlpsandbox-schemas/blob/develop/LICENSE
   title: NLP Sandbox Person Name Annotator API
-  version: 0.2.2
+  version: 0.3.1
   x-logo:
-    url: https://Sage-Bionetworks.github.io/nlp-sandbox-schemas/logo.png
+    url: https://nlpsandbox.github.io/nlpsandbox-schemas/logo.png
 servers:
 - url: http://example.com/api/v1
 - url: https://example.com/api/v1
 tags:
+- description: Operations about health checks
+  name: HealthCheck
 - description: Operations about text person name annotations
   name: TextPersonNameAnnotation
-- description: Operations about this API service
-  name: Service
+- description: Operations about this tool
+  name: Tool
 paths:
-  /service:
+  /healthCheck:
     get:
-      description: Get information about the service
-      operationId: service
+      description: Get information about the health of the service
+      operationId: get_health_check
       responses:
         "200":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Service'
+                $ref: '#/components/schemas/HealthCheck'
           description: Success
-        "403":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-          description: Unauthorized
         "404":
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
           description: The specified resource was not found
-      summary: Get service information
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: The request cannot be fulfilled due to an unexpected server
+            error
+      summary: Get health check information
       tags:
-      - Service
-      x-openapi-router-controller: openapi_server.controllers.service_controller
+      - HealthCheck
+      x-openapi-router-controller: openapi_server.controllers.health_check_controller
   /textPersonNameAnnotations:
     post:
       description: Return the person name annotations found in a clinical note
@@ -73,36 +76,148 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
           description: Unauthorized
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: The request cannot be fulfilled due to an unexpected server
+            error
       summary: Annotate person names in a clinical note
       tags:
       - TextPersonNameAnnotation
       x-openapi-router-controller: openapi_server.controllers.text_person_name_annotation_controller
+  /tool:
+    get:
+      description: Get information about the tool
+      operationId: get_tool
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Tool'
+          description: Success
+        "404":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: The specified resource was not found
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: The request cannot be fulfilled due to an unexpected server
+            error
+      summary: Get tool information
+      tags:
+      - Tool
+      x-openapi-router-controller: openapi_server.controllers.tool_controller
+  /tool/dependencies:
+    get:
+      description: Get the dependencies of this tool
+      operationId: get_tool_dependencies
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ToolDependencies'
+          description: Success
+        "404":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: The specified resource was not found
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: The request cannot be fulfilled due to an unexpected server
+            error
+      summary: Get tool dependencies
+      tags:
+      - Tool
+      x-openapi-router-controller: openapi_server.controllers.tool_controller
 components:
   responses:
-    Unauthorized:
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/Error'
-      description: Unauthorized
     NotFound:
       content:
         application/json:
           schema:
             $ref: '#/components/schemas/Error'
       description: The specified resource was not found
+    InternalServerError:
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Error'
+      description: The request cannot be fulfilled due to an unexpected server error
+    Unauthorized:
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Error'
+      description: Unauthorized
   schemas:
+    HealthCheck:
+      description: Represents the health of a service
+      example:
+        status: pass
+      properties:
+        status:
+          description: Indicates whether the service status is acceptable or not
+          enum:
+          - pass
+          - fail
+          - warn
+          type: string
+      required:
+      - status
+      type: object
+    Error:
+      description: Problem details (tools.ietf.org/html/rfc7807)
+      properties:
+        title:
+          description: A human readable documentation for the problem type
+          type: string
+        status:
+          description: The HTTP status code
+          type: integer
+        detail:
+          description: A human readable explanation specific to this occurrence of
+            the problem
+          type: string
+        type:
+          description: An absolute URI that identifies the problem type
+          type: string
+      required:
+      - status
+      - title
+      type: object
+    NoteResourceId:
+      description: ID of the clinical note
+      example: 507f1f77bcf86cd799439011
+      type: string
+    PatientResourceId:
+      description: ID of the FHIR patient
+      example: 507f1f77bcf86cd799439011
+      type: string
     Note:
       description: A clinical note
       example:
         noteType: loinc:LP29684-5
         patientId: 507f1f77bcf86cd799439011
-        id: id
+        id: 507f1f77bcf86cd799439011
         text: On 12/26/2020, Ms. Chloe Price met with Dr. Prescott.
       properties:
         id:
-          description: The ID of the note
-          readOnly: true
+          description: ID of the clinical note
+          example: 507f1f77bcf86cd799439011
           type: string
         text:
           description: The content of the clinical note
@@ -113,7 +228,7 @@ components:
           example: loinc:LP29684-5
           type: string
         patientId:
-          description: The patient ID
+          description: ID of the FHIR patient
           example: 507f1f77bcf86cd799439011
           type: string
       required:
@@ -126,7 +241,7 @@ components:
         note:
           noteType: loinc:LP29684-5
           patientId: 507f1f77bcf86cd799439011
-          # id: id
+          id: 507f1f77bcf86cd799439011
           text: On 12/26/2020, Ms. Chloe Price met with Dr. Prescott.
       properties:
         note:
@@ -156,6 +271,7 @@ components:
       required:
       - length
       - start
+      - text
       type: object
     TextPersonNameAnnotation:
       allOf:
@@ -183,66 +299,88 @@ components:
             $ref: '#/components/schemas/TextPersonNameAnnotation'
           type: array
       type: object
-    Error:
-      description: Problem details (tools.ietf.org/html/rfc7807)
-      properties:
-        title:
-          description: A human readable documentation for the problem type
-          type: string
-        status:
-          description: The HTTP status code
-          type: integer
-        detail:
-          description: A human readable explanation specific to this occurrence of
-            the problem
-          type: string
-        type:
-          description: An absolute URI that identifies the problem type
-          type: string
-      required:
-      - status
-      - title
-      type: object
-    Service:
-      description: Information about an NLP service
+    License:
+      description: License (license keyword used by GitHub)
+      enum:
+      - afl-3.0
+      - apache-2.0
+      - artistic-2.0
+      - bsl-1.0
+      - bsd-2-clause
+      - bsd-3-clause
+      - bsd-3-clause-clear
+      - cc
+      - cc0-1.0
+      - cc-by-4.0
+      - cc-by-sa-4.0
+      - wtfpl
+      - ecl-2.0
+      - epl-1.0
+      - epl-2.0
+      - eupl-1.1
+      - agpl-3.0
+      - gpl
+      - gpl-2.0
+      - gpl-3.0
+      - lgpl
+      - lgpl-2.1
+      - lgpl-3.0
+      - isc
+      - lppl-1.3c
+      - ms-pl
+      - mit
+      - mpl-2.0
+      - osl-3.0
+      - postgresql
+      - ofl-1.1
+      - ncsa
+      - unlicense
+      - zlib
+      example: apache-2.0
+      type: string
+    ToolType:
+      description: Type of this tool
+      example: nlpsandbox:date-annotator
+      type: string
+    Tool:
+      description: Information about an NLP tool
       example:
-        license: Apache-2.0
+        license: apache-2.0
         authorEmail: author@example.com
         author: Example Author
         name: awesome-date-annotator
         description: An awesome Date Annotator based on regex patterns
         repository: github:awesome-org/awesome-date-annotator
         version: 1.0.0
+        toolType: nlpsandbox:date-annotator
         url: https://openapi-generator.tech
       properties:
         name:
-          description: The service name
+          description: The tool name
           example: awesome-date-annotator
           maxLength: 60
           minLength: 3
           pattern: ^[a-z0-9]+(?:-[a-z0-9]+)*$
           type: string
         version:
-          description: The version of the service (SemVer string)
+          description: The version of the tool (SemVer string)
           example: 1.0.0
           minLength: 1
           pattern: ^(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?$
           type: string
         license:
-          description: The license of this service (spdx.org/licenses Identifier)
-          example: Apache-2.0
-          type: string
+          $ref: '#/components/schemas/License'
         repository:
           description: The place where the code lives
           example: github:awesome-org/awesome-date-annotator
           type: string
         description:
-          description: A short, one-sentence summary of the service
+          description: A short, one-sentence summary of the tool
           example: An awesome Date Annotator based on regex patterns
           maxLength: 100
           type: string
         author:
-          description: The author of the service
+          description: The author of the tool
           example: Example Author
           type: string
         authorEmail:
@@ -251,7 +389,50 @@ components:
           format: email
           type: string
         url:
-          description: The URL to the homepage of the service
+          description: The URL to the homepage of the tool
           format: uri
           type: string
+        toolType:
+          description: Type of this tool
+          example: nlpsandbox:date-annotator
+          type: string
+      required:
+      - author
+      - authorEmail
+      - description
+      - license
+      - name
+      - repository
+      - toolType
+      - url
+      - version
+      type: object
+    ToolDependencies:
+      description: A list of tool dependencies
+      example:
+        toolDependencies:
+        - license: apache-2.0
+          authorEmail: author@example.com
+          author: Example Author
+          name: awesome-date-annotator
+          description: An awesome Date Annotator based on regex patterns
+          repository: github:awesome-org/awesome-date-annotator
+          version: 1.0.0
+          toolType: nlpsandbox:date-annotator
+          url: https://openapi-generator.tech
+        - license: apache-2.0
+          authorEmail: author@example.com
+          author: Example Author
+          name: awesome-date-annotator
+          description: An awesome Date Annotator based on regex patterns
+          repository: github:awesome-org/awesome-date-annotator
+          version: 1.0.0
+          toolType: nlpsandbox:date-annotator
+          url: https://openapi-generator.tech
+      properties:
+        toolDependencies:
+          description: A list of tools
+          items:
+            $ref: '#/components/schemas/Tool'
+          type: array
       type: object
